--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -15,6 +15,7 @@ body
     align-items: center
     width: 100%
     height: 100vh
+    overflow: hidden
     &-title
         position: absolute
         bottom: 20px
