change to non-class version

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -67,7 +67,7 @@ body
             &:after
                 animation: 2s ease-in-out floatingShadow infinite
 
-        &.is-open
+        &.is-opened
             animation: none !important
             &.has-shadow
                 [class*="cube-"]
@@ -131,7 +131,7 @@ body
         [class*="cube-"]
             opacity: 0.7
 
-    &.is-open
+    &.is-opened
     &.is-perspective
         animation: none
         opacity: 1
